--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -12,3 +12,8 @@ body {
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #333;
 }
+
+
+.hidden {
+  display: none;
+}
