new theme, further adjustment and fixes to room elements (switching docents works)

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -45,7 +45,9 @@ paper-item-body.paper-item-body-0[two-line] {
 
 }
 
-
+paper-material {
+  background-color: #fff;
+}
 
 paper-item-body.paper-item-body-0  [secondary] {
   color:#757575;font-family:'Roboto', 'Noto', sans-serif;
