--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -12,56 +12,53 @@ body {
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #333;
 }
-
-
 .hidden {
   display: none;
 }
 
-paper-item-body{
-
-				border-bottom: 1px solid lightgray;
-
+paper-item-body {
+  border-bottom: 1px solid lightgray;
 }
-	paper-item-body.paper-item-body-0 {
-      display:-ms-flexbox;
-      display:-webkit-flex;
-      display:flex;
 
-      -ms-flex-direction:column;
-      -webkit-flex-direction:column;
-      flex-direction:column;-ms-flex-pack:center;
-      -webkit-justify-content:center;
-      justify-content:center;-ms-flex:1 1 0.000000001px;
-      -webkit-flex:1;
-      flex:1;
-      -webkit-flex-basis:0.000000001px;
-      flex-basis:0.000000001px;
-
+paper-item-body.paper-item-body-0 {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -ms-flex: 1 1 0.000000001px;
+  -webkit-flex: 1;
+  flex: 1;
+  -webkit-flex-basis: 0.000000001px;
+  flex-basis: 0.000000001px;
 }
 
 paper-item-body.paper-item-body-0[two-line] {
-  min-height:72px;
-
+  min-height: 72px;
 }
 
-paper-material {
-  background-color: #fff;
+paper-dialog {
+  background-color: rgb(255, 255, 255);
+  max-width: 80%;
+  width: 60%;
+  height: 50% !important;
+  max-height: 100%;
+  position: absolute !important;
+  left: 0 !important;
+  right: 0 !important;
+  top: 0 !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
 }
-
-paper-item-body.paper-item-body-0  [secondary] {
-  color:#757575;font-family:'Roboto', 'Noto', sans-serif;
-      -webkit-font-smoothing:antialiased;
-
-      font-size:14px;
-      font-weight:400;
-      line-height:20px;
-
-}
-
-iron-image {
-	margin-right: 10px;
-	border-radius: 50%;
-	border-width: thick;
-	border-color: red;
+paper-item-body.paper-item-body-0 [secondary] {
+  color: #757575;
+  font-family: 'Roboto', 'Noto', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
 }
