--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -15,7 +15,13 @@ body {
 .hidden {
   display: none;
 }
+.red {
+  color: rgb(162, 19, 0);
+}
 
+.green {
+  color: rgb(0, 140, 6);
+}
 paper-item-body {
   border-bottom: 1px solid lightgray;
 }
@@ -45,12 +51,12 @@ paper-dialog {
   background-color: rgb(255, 255, 255);
   max-width: 80%;
   width: 60%;
-  height: 50% !important;
+  /*height: 50% !important;*/
   max-height: 100%;
-  position: absolute !important;
+  position: fixed !important;
   left: 0 !important;
   right: 0 !important;
-  top: 0 !important;
+  top: 10% !important;
   margin-left: auto !important;
   margin-right: auto !important;
 }
