--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -46,7 +46,6 @@ height: 250px;
    position: absolute;
    right: 32px;
    top: -61px;
-
 }
 
 .username{
@@ -79,16 +78,23 @@ paper-item-body.paper-item-body-0[two-line] {
 
 paper-dialog {
   background-color: rgb(255, 255, 255);
-  max-width: 80%;
+    max-width: 540px;
   /*width: 60%;*/
   /*height: 50% !important;*/
+  padding-bottom: 0px;
   max-height: 100%;
   position: fixed !important;
   left: 0 !important;
   right: 0 !important;
-  top: 10% !important;
+  top: 30% !important;
   margin-left: auto !important;
   margin-right: auto !important;
+
+}
+
+paper-header-panel{
+  margin-top: 0px !important;
+  padding:0 !important;
 }
 
 paper-item-body.paper-item-body-0 [secondary] {
