--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -64,6 +64,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     width: 100% !important;
     position: absolute;
   }
+#headericon, .usericon{
+  fill: rgb(255, 255, 255);
+}
+
   #heading.paper-time-picker {
     color: white !important;
   }
